# TFG

./: README.md
Bachelor Thesis/: proyecto.aux  proyecto.bbl  proyecto.blg  proyecto.dvi  proyecto.lof  proyecto.lot  proyecto.out  proyecto.tex  proyecto.toc
Bachelor Thesis/bibliografia/: bibliografia.bib
Bachelor Thesis/capitulos/: 01_Introduccion.tex  02_Entorno.tex  03_Planificacion.tex  04_Analisis.tex  05_Implementacion.tex  06_Pruebas.tex  07_Conclusiones.tex  09_Anexo.tex
Bachelor Thesis/portada/: portada.tex
Bachelor Thesis/prefacios/: prefacio.tex
classif/: CMakeLists.txt  baxter_img.cpp  classif.py  classification.launch  package.xml  results-big.txt  results-peq.txt  results.txt
dyn_classif/: CMakeLists.txt  baxter_img.cpp  dyn_classif.launch  dyn_classif.py  package.xml
dyn_wedge/: CMakeLists.txt  baxter_img.cpp  dyn_wedge.launch  dyn_wedge.py  package.xml
pick_and_place/: CMakeLists.txt  baxter_img.cpp  baxter_pick_and_place_demo.launch  package.xml  pick_and_place_demo.py
