<?xml version="1.0"?>
<package>
  <name>pick_and_place</name>
  <version>1.2.12</version>
  <description>The pick_and_place package</description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <author>Ian McMahon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>OpenCv</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msg/Image</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_tools</build_depend>

  <run_depend>OpenCv</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msg/Image</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_tools</run_depend>

  <export>
  
  </export>

</package>
